--- a/frontend/admin/Home.html
+++ b/frontend/admin/Home.html
@@ -94,7 +94,7 @@
                 <div class="Name">
                   <p>
                     Welcome <br />
-                    Manager 0076
+                    <span id="username"></span>
                   </p>
                 </div>
                 <div
@@ -179,6 +179,11 @@
     </div>
     <script>
         $(document).ready(() => {
+
+          const dataAdminJson = sessionStorage.getItem("loggedUser");
+          const dataAdminObj = JSON.parse(dataAdminJson);
+
+          $("#username").text(dataAdminObj.username);
 
          $("#menu").click(function(){
           window.location.href = "home.html";
