--- a/frontend/admin/membership.html
+++ b/frontend/admin/membership.html
@@ -96,7 +96,7 @@
                 <div class="Name">
                   <p>
                     Welcome <br />
-                    Manager 0076
+                     <span id="username"></span>
                   </p>
                 </div>
                 <div
@@ -187,6 +187,10 @@
 
     <script>
       $(document).ready(() => {
+          const dataAdminJson = sessionStorage.getItem("loggedUser");
+          const dataAdminObj = JSON.parse(dataAdminJson);
+
+          $("#username").text(dataAdminObj.username);
         //button to add user
 
         function loadMembership(keyword = "") {
