--- a/frontend/admin/Transaction.html
+++ b/frontend/admin/Transaction.html
@@ -18,8 +18,8 @@
               <div class="logo">
                 <img src="../assets/logo.png" alt="" style="height: 200px" />
               </div>
-              <div class="menu" id="menu">
-                <div class="DashBoard">
+              <div class="menu" >
+                <div class="DashBoard" id="menu">
                   <b
                     ><a href="Home.html" style="text-decoration: none; color: black"
                       ><p>Dashboard</p></a
@@ -62,15 +62,14 @@
                   >
                 </div>
               </div>
-              
-            </div>
-        <div class="SH">
+            </div>  
+         <div class="SH">
                   <div class="menu2">
-                    <div class="LogOut">
-                      <b><a href="" style="text-decoration: none; color: black"><p>Log Out</p></a></b>
+                    <div id="logout" class="LogOut">
+                      <b>Log Out</b>
                     </div>
                 </div>
-            </div>
+              </div>
       </div> <!-- Close Sidebar -->
 
       <!-- Main Dashboard -->
@@ -193,9 +192,13 @@ $(document).ready(() => {
           window.location.href = "MM.html";
         })
         $("#MemPlans").click(function(){
-          window.location.href = "MM.html";
+          window.location.href = "membership.html";
         })
 
+        $("#logout").click(() => {
+          window.location.href = "login.html";
+          sessionStorage.removeItem("loggedUser")
+        })
 
       });
 </script>
