--- a/frontend/admin/Transaction.html
+++ b/frontend/admin/Transaction.html
@@ -1,136 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/ADMIN/admin-display.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style/ADMIN/admin-display.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="MainCont">
-  <div class="SecCont">
-    <!-- Home -->
-    <div class="HomeCont">
-      <!-- Sidebar -->
-      <div class="Sidebar">
-        <div class="FH">
+      <div class="SecCont">
+        <!-- Home -->
+        <div class="HomeCont">
+          <!-- Sidebar -->
+          <div class="Sidebar">
+            <div class="FH">
               <div class="logo">
                 <img src="../assets/logo.png" alt="" style="height: 200px" />
               </div>
-              <div class="menu" >
+              <div class="menu">
                 <div class="DashBoard" id="menu">
-                  <b
-                    ><a href="Home.html" style="text-decoration: none; color: black"
-                      ><p>Dashboard</p></a
-                    ></b
-                  >
+                  <b>Dashboard</b>
                 </div>
                 <div class="UserData" id="UserData">
-                  <b
-                    ><a href="member.html" style="text-decoration: none; color: black"
-                      ><p>Member</p></a
-                    ></b
-                  >
+                  <b>Member</b>
                 </div>
                 <div class="CashiersData" id="CashiersData">
-                  <b
-                    ><a href="Cashier.html" style="text-decoration: none; color: black"
-                      ><p>Cashier Data</p></a
-                    ></b
-                  >
+                  <b>Cashier Data</b>
                 </div>
                 <div class="TransREport" id="TransREport">
-                  <b
-                    ><a href="Cashier.html" style="text-decoration: none; color: black"
-                      ><p>Transacation Report</p></a
-                    ></b
-                  >
+                  <b>Transacation Report</b>
                 </div>
                 <div class="Member2" id="Member2">
-                  <b
-                    ><a href="MM.html" style="text-decoration: none; color: black"
-                      ><p>Member Membership</p></a
-                    ></b
-                  >
+                  <b>Member Membership</b>
                 </div>
                 <div class="MemPlans" id="MemPlans">
-                  <b
-                    ><a href="MM.html" style="text-decoration: none; color: black"
-                      ><p>Membership Plans</p></a
-                    ></b
-                  >
+                  <b>Membership Plans</b>
                 </div>
               </div>
-            </div>  
-         <div class="SH">
-                  <div class="menu2">
-                    <div id="logout" class="LogOut">
-                      <b>Log Out</b>
-                    </div>
+            </div>
+            <div class="SH">
+              <div class="menu2">
+                <div id="logout" class="LogOut">
+                  <b>Log Out</b>
                 </div>
               </div>
-      </div> <!-- Close Sidebar -->
-
-      <!-- Main Dashboard -->
-      <div class="MainBoard">
-        <!-- Header -->
-        <div class="header">
-          <div class="DashbordDesc" style="padding-left: 30px;">
-            <p style="font-size: 30px;">Transacation</p>
-          </div>
-          <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
-            <div class="Name">
-              <p>Welcome <br>  
-              <span id="username"></span>
-            </div>
-            <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
-              <p style="color: aliceblue;">O&lt;&lt;</p>
             </div>
           </div>
-        </div>
+          <!-- Close Sidebar -->
 
-        <div class="MainBoardBody">
-          <div class="SeccondBoardBody">
-            <div class="TableAndInput" style="width: 100%; height: 100%;">
-              <div class="table">
-                <table style="border-collapse: collapse; width: 100%; text-align: center;">
-                  <thead>
-                    <tr style="background-color: #3f729b; color: white;">
-                      <th style="padding: 10px; border: 2px solid #2e5984;">Member ID</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984;">Plan ID</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984;">Payment Method</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984;">Description</th>
-                    </tr>
-                  </thead>
-                  <tbody id="tbody">
-                    <tr style="background-color: #aac4e0;">
-    
-                    </tr>
-                  </tbody>
-                </table>
+          <!-- Main Dashboard -->
+          <div class="MainBoard">
+            <!-- Header -->
+            <div class="header">
+              <div class="DashbordDesc" style="padding-left: 30px">
+                <p style="font-size: 30px">Transacation</p>
               </div>
-              <!-- 
+              <div
+                class="Profile"
+                style="
+                  padding-right: 20px;
+                  display: flex;
+                  justify-content: space-evenly;
+                  align-items: center;
+                  width: 15%;
+                "
+              >
+                <div class="Name">
+                  <p>
+                    Welcome <br />
+                    <span id="username"></span>
+                  </p>
+                </div>
+
+                <div
+                  class="ProfilePic"
+                  style="
+                    background-color: black;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50px;
+                    align-items: center;
+                    justify-content: center;
+                    display: flex;
+                  "
+                >
+                  <p style="color: aliceblue">O&lt;&lt;</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="MainBoardBody">
+              <div class="SeccondBoardBody">
+                <div class="TableAndInput" style="width: 100%; height: 100%">
+                  <div class="table">
+                    <table
+                      style="
+                        border-collapse: collapse;
+                        width: 100%;
+                        text-align: center;
+                      "
+                    >
+                      <thead>
+                        <tr style="background-color: #3f729b; color: white">
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Member ID
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Plan ID
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Payment Method
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Description
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody id="tbody">
+                        <tr style="background-color: #aac4e0"></tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <!-- 
               <div class="button" style="width: 100%; height: fit-content; display: flex; justify-content: center; align-items: center;">
                 <button style="width: 200px; height: 30px; background-color: green; border: none; border-radius: 10px;">
                   <p>Add Data</p>
                 </button>
               </div>
               -->
+                </div>
+              </div>
             </div>
           </div>
+          <!-- Close MainBoard -->
         </div>
-      </div> <!-- Close MainBoard -->
-    </div> <!-- Close HomeCont -->
-  </div> <!-- Close SecCont -->
-</div> <!-- Close MainCont -->
-<script>
-$(document).ready(() => {
+        <!-- Close HomeCont -->
+      </div>
+      <!-- Close SecCont -->
+    </div>
+    <!-- Close MainCont -->
+    <script>
+      $(document).ready(() => {
+        const dataAdminJson = sessionStorage.getItem("loggedUser");
+        const dataAdminObj = JSON.parse(dataAdminJson);
 
-          const dataAdminJson = sessionStorage.getItem("loggedUser");
-          const dataAdminObj = JSON.parse(dataAdminJson);
-
-          $("#username").text(dataAdminObj.username);
+        $("#username").text(dataAdminObj.username);
 
         //button to add user
         // for some reason it cant fecth the data for cashier, idk why. Imma just fix the displays
@@ -180,34 +195,30 @@ $(document).ready(() => {
         }
         loadkasir();
 
-
-
-       
-       $("#menu").click(function(){
+        $("#menu").click(function () {
           window.location.href = "home.html";
-        })
-        $("#UserData").click(function(){
+        });
+        $("#UserData").click(function () {
           window.location.href = "member.html";
-        })
-        $("#CashiersData").click(function(){
+        });
+        $("#CashiersData").click(function () {
           window.location.href = "Cashier.html";
-        })
-        $("#TransREport").click(function(){
+        });
+        $("#TransREport").click(function () {
           window.location.href = "Cashier.html";
-        })
-        $("#Member2").click(function(){
+        });
+        $("#Member2").click(function () {
           window.location.href = "MM.html";
-        })
-        $("#MemPlans").click(function(){
+        });
+        $("#MemPlans").click(function () {
           window.location.href = "membership.html";
-        })
+        });
 
         $("#logout").click(() => {
           window.location.href = "login.html";
-          sessionStorage.removeItem("loggedUser")
-        })
-
+          sessionStorage.removeItem("loggedUser");
+        });
       });
-</script>
-</body>
+    </script>
+  </body>
 </html>
