--- a/frontend/admin/addCashier.html
+++ b/frontend/admin/addCashier.html
@@ -18,58 +18,34 @@
               <div class="logo">
                 <img src="../assets/logo.png" alt="" style="height: 200px" />
               </div>
-              <div class="menu" >
+              <div class="menu">
                 <div class="DashBoard" id="menu">
-                  <b
-                    ><a href="Home.html" style="text-decoration: none; color: black"
-                      ><p>Dashboard</p></a
-                    ></b
-                  >
+                  <b>Dashboard</b>
                 </div>
                 <div class="UserData" id="UserData">
-                  <b
-                    ><a href="member.html" style="text-decoration: none; color: black"
-                      ><p>Member</p></a
-                    ></b
-                  >
+                  <b>Member</b>
                 </div>
                 <div class="CashiersData" id="CashiersData">
-                  <b
-                    ><a href="Cashier.html" style="text-decoration: none; color: black"
-                      ><p>Cashier Data</p></a
-                    ></b
-                  >
+                  <b>Cashier Data</b>
                 </div>
                 <div class="TransREport" id="TransREport">
-                  <b
-                    ><a href="Cashier.html" style="text-decoration: none; color: black"
-                      ><p>Transacation Report</p></a
-                    ></b
-                  >
+                  <b>Transacation Report</b>
                 </div>
                 <div class="Member2" id="Member2">
-                  <b
-                    ><a href="MM.html" style="text-decoration: none; color: black"
-                      ><p>Member Membership</p></a
-                    ></b
-                  >
+                  <b>Member Membership</b>
                 </div>
                 <div class="MemPlans" id="MemPlans">
-                  <b
-                    ><a href="membership.html" style="text-decoration: none; color: black"
-                      ><p>Membership Plans</p></a
-                    ></b
-                  >
+                  <b>Membership Plans</b>
                 </div>
               </div>
             </div>
             <div class="SH">
-                  <div class="menu2">
-                    <div id="logout" class="LogOut">
-                      <b>Log Out</b>
-                    </div>
+              <div class="menu2">
+                <div id="logout" class="LogOut">
+                  <b>Log Out</b>
                 </div>
               </div>
+            </div>
           </div>
           <!-- Close Sidebar -->
 
@@ -123,14 +99,13 @@
               >
                 <div class="card">
                   <form action="" id="addCashier">
-
-                    <label >Username</label>
-                    <input type="text" id="name" name="username"/>
+                    <label>Username</label>
+                    <input type="text" id="name" name="username" />
 
                     <label>Gmail</label>
                     <input type="email" id="email" name="email" />
 
-                    <label >Password</label>
+                    <label>Password</label>
                     <input type="text" id="pw" name="password" />
 
                     <button class="edit-btn">Add</button>
@@ -146,8 +121,8 @@
       <!-- Close SecCont -->
     </div>
     <!-- Close MainCont -->
-     <script>
-        $(document).ready(() => {
+    <script>
+      $(document).ready(() => {
         const $addCashier = $("#addCashier");
 
         $addCashier.submit((e) => {
@@ -178,7 +153,7 @@
                   JSON.stringify(res.data)
                 );
                 window.location.href = "Cashier.html";
-                alert("Data Added Successfully")
+                alert("Data Added Successfully");
               }
             },
             error: (xhr, status, error) => {
@@ -205,31 +180,31 @@
           });
         });
 
-        $("#menu").click(function(){
-          window.location.href = "home.html";
-        })
-        $("#UserData").click(function(){
+        $("#menu").click(function () {
+          window.location.href = "Home.html";
+        });
+        $("#UserData").click(function () {
           window.location.href = "member.html";
-        })
-        $("#CashiersData").click(function(){
+        });
+        $("#CashiersData").click(function () {
           window.location.href = "Cashier.html";
-        })
-        $("#TransREport").click(function(){
+        });
+        $("#TransREport").click(function () {
           window.location.href = "Cashier.html";
-        })
-        $("#Member2").click(function(){
+        });
+        $("#Member2").click(function () {
           window.location.href = "MM.html";
-        })
-        $("#MemPlans").click(function(){
+        });
+        $("#MemPlans").click(function () {
           window.location.href = "membership.html";
-        })
+        });
 
-        // logout 
+        // logout
         $("#logout").click(() => {
           window.location.href = "login.html";
-          sessionStorage.removeItem("loggedUser")
-        })
+          sessionStorage.removeItem("loggedUser");
+        });
       });
-     </script>
+    </script>
   </body>
 </html>
