idk man GH is makin me do this

--- a/frontend/admin/register.html
+++ b/frontend/admin/register.html
@@ -81,7 +81,7 @@
               console.log(`success ${res}`);
               if (res.status === 201) {
                 sessionStorage.setItem(
-                  "registeredUser",
+                  "loggedUser",
                   JSON.stringify(res.data)
                 );
                 window.location.href = "Home.html";
